Android video thumbnail: Better error handling.

This CL fixes two crash in video thumbnail flow.

1. VideoFrameExtractor::ReadVideoFrame can return nullptr, and should
report error.

2. Invalid media::VideoDecoderConfig will cause mojo serialization
failure, instead we can use optional to gracefully handle this case.

TBR=dcheng@chromium.org

Bug: 893207
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: I0dc3115c1a25231535c0743723103d870cbe59fd
Reviewed-on: https://chromium-review.googlesource.com/c/1269724
Commit-Queue: Xing Liu <xingliu@chromium.org>
Reviewed-by: Min Qin <qinmin@chromium.org>
Reviewed-by: Dale Curtis <dalecurtis@chromium.org>
Reviewed-by: David Trainor <dtrainor@chromium.org>
Reviewed-by: Tommy Li <tommycli@chromium.org>
Cr-Commit-Position: refs/heads/master@{#598814}
Former-commit-id: 514809123e6d11e890b6eb234bb89b0335010fe4