chrome/services/media_gallery_util/media_parser_android.cc
@@ -4,6 +4,7 @@
 
 #include "chrome/services/media_gallery_util/media_parser_android.h"
 
+#include "base/optional.h"
 #include "base/task/post_task.h"
 #include "base/task/task_traits.h"
 #include "chrome/services/media_gallery_util/ipc_data_source.h"
@@ -28,7 +29,7 @@ void OnSoftwareVideoFrameDecoded(
 
   if (!frame) {
     std::move(video_frame_callback)
-        .Run(false, chrome::mojom::VideoFrameData::New(), config);
+        .Run(false, chrome::mojom::VideoFrameData::New(), base::nullopt);
     return;
   }
 
@@ -47,7 +48,7 @@ void OnEncodedVideoFrameExtracted(
     const media::VideoDecoderConfig& config) {
   if (!success || data.empty()) {
     std::move(video_frame_callback)
-        .Run(false, chrome::mojom::VideoFrameData::New(), config);
+        .Run(false, chrome::mojom::VideoFrameData::New(), base::nullopt);
     return;
   }
 
@@ -67,7 +68,7 @@ void OnEncodedVideoFrameExtracted(
   if (config.codec() != media::VideoCodec::kCodecVP8 &&
       config.codec() != media::VideoCodec::kCodecVP9) {
     std::move(video_frame_callback)
-        .Run(false, chrome::mojom::VideoFrameData::New(), config);
+        .Run(false, chrome::mojom::VideoFrameData::New(), base::nullopt);
     return;
   }
 
